<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_1">

        <Preference
            android:title="@string/action_license"
            android:summary="@string/action_license_summary"
            android:key="license" />

        <Preference
            android:title="@string/action_changelog"
            android:summary="@string/action_changelog_summary"
            android:key="changelog" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_2">

        <Preference
            android:title="@string/action_clearCache"
            android:summary="@string/action_clearCache_summary"
            android:key="clearCache" />

        <ListPreference
            android:title="@string/action_start"
            android:summary="@string/action_start_summary"
            android:key="startType"
            android:defaultValue="1"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues" />

    </PreferenceCategory>

</PreferenceScreen>