<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/firstBookmark_title"
        android:summary="@string/firstBookmark_title_summary"
        android:key="first_bookmark"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:title="@string/firstBrowser_title"
        android:summary="@string/firstBrowser_title_summary"
        android:key="first_browser"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:title="@string/firstSearch_title"
        android:summary="@string/firstSearch_title_summary"
        android:key="first_search"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:title="@string/firstScreenshot_title"
        android:summary="@string/firstScreenshot_title_summary"
        android:key="first_screenshot"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:title="@string/perm_notShow_title"
        android:summary="@string/perm_notShow_title_summary"
        android:key="perm_notShow"
        android:defaultValue="true" />

</PreferenceScreen>